docs/envoy/v1.22.0/_sources/intro/arch_overview/security/external_dep_dataplane_ext.rst.txt

envoy.access_loggers.extension_filters.cel
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `60c7aea <https://github.com/google/cel-cpp/tree/60c7aeabb4e6fa633b49c14d6c6fc8f0516761b9>`__, 2021-11-08, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `2.0.0 <https://github.com/google/flatbuffers/releases/tag/v2.0.0>`__, 2021-05-10, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__


envoy.access_loggers.wasm
~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `60c7aea <https://github.com/google/cel-cpp/tree/60c7aeabb4e6fa633b49c14d6c6fc8f0516761b9>`__, 2021-11-08, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `2.0.0 <https://github.com/google/flatbuffers/releases/tag/v2.0.0>`__, 2021-05-10, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `694a0b0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/694a0b073912ff3bd00b6ca70d16ca43b2aebbf2>`__, 2022-04-07, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, 


envoy.bootstrap.wasm
~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `60c7aea <https://github.com/google/cel-cpp/tree/60c7aeabb4e6fa633b49c14d6c6fc8f0516761b9>`__, 2021-11-08, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `2.0.0 <https://github.com/google/flatbuffers/releases/tag/v2.0.0>`__, 2021-05-10, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `694a0b0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/694a0b073912ff3bd00b6ca70d16ca43b2aebbf2>`__, 2022-04-07, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, 


envoy.compression.brotli.compressor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `brotli <https://brotli.org>`__, `0cd2e39 <https://github.com/google/brotli/tree/0cd2e3926e95e7e2930f57ae3f4885508d462a25>`__, 2020-09-08, `cpe:2.3:a:google:brotli:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Abrotli%3A%2A&search_type=all>`__


envoy.compression.brotli.decompressor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `brotli <https://brotli.org>`__, `0cd2e39 <https://github.com/google/brotli/tree/0cd2e3926e95e7e2930f57ae3f4885508d462a25>`__, 2020-09-08, `cpe:2.3:a:google:brotli:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Abrotli%3A%2A&search_type=all>`__


envoy.compression.zstd.compressor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `zstd <https://facebook.github.io/zstd>`__, `1.5.2 <https://github.com/facebook/zstd/releases/tag/v1.5.2>`__, 2022-01-20, `cpe:2.3:a:facebook:zstandard:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afacebook%3Azstandard%3A%2A&search_type=all>`__


envoy.compression.zstd.decompressor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `zstd <https://facebook.github.io/zstd>`__, `1.5.2 <https://github.com/facebook/zstd/releases/tag/v1.5.2>`__, 2022-01-20, `cpe:2.3:a:facebook:zstandard:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Afacebook%3Azstandard%3A%2A&search_type=all>`__


envoy.filters.http.aws_lambda
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.82.0 <https://github.com/curl/curl/releases/tag/curl-7_82_0>`__, 2022-03-05, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.filters.http.aws_request_signing
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.82.0 <https://github.com/curl/curl/releases/tag/curl-7_82_0>`__, 2022-03-05, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.filters.http.grpc_json_transcoder
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `grpc-httpjson-transcoding <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding>`__, `9e2a4b5 <https://github.com/grpc-ecosystem/grpc-httpjson-transcoding/tree/9e2a4b583fef47d85775fb8bd3baf7115b0e71b1>`__, 2022-01-06, 


envoy.filters.http.jwt_authn
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `jwt_verify_lib <https://github.com/google/jwt_verify_lib>`__, `e5d6cf7 <https://github.com/google/jwt_verify_lib/tree/e5d6cf7067495b0868787e1fd1e75cef3242a840>`__, 2021-03-05, 


envoy.filters.http.language
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ICU Library <https://github.com/unicode-org/icu>`__, `70-1 <https://github.com/unicode-org/icu/releases/tag/release-70-1>`__, 2021-10-28, 


envoy.filters.http.lua
~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `LuaJIT <https://luajit.org>`__, `1d8b747 <https://github.com/LuaJIT/LuaJIT/tree/1d8b747c161db457e032a023ebbff511f5de5ec2>`__, 2020-10-12, `cpe:2.3:a:luajit:luajit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aluajit%3Aluajit%3A%2A&search_type=all>`__
  `Moonjit <https://github.com/moonjit/moonjit>`__, `2.2.0 <https://github.com/moonjit/moonjit/releases/tag/2.2.0>`__, 2020-01-14, `cpe:2.3:a:moonjit_project:moonjit:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Amoonjit_project%3Amoonjit%3A%2A&search_type=all>`__


envoy.filters.http.rbac
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `60c7aea <https://github.com/google/cel-cpp/tree/60c7aeabb4e6fa633b49c14d6c6fc8f0516761b9>`__, 2021-11-08, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `2.0.0 <https://github.com/google/flatbuffers/releases/tag/v2.0.0>`__, 2021-05-10, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__


envoy.filters.http.wasm
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `60c7aea <https://github.com/google/cel-cpp/tree/60c7aeabb4e6fa633b49c14d6c6fc8f0516761b9>`__, 2021-11-08, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `2.0.0 <https://github.com/google/flatbuffers/releases/tag/v2.0.0>`__, 2021-05-10, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `694a0b0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/694a0b073912ff3bd00b6ca70d16ca43b2aebbf2>`__, 2022-04-07, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, 


envoy.filters.network.dubbo_proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `hessian2-codec <https://github.com/alibaba/hessian2-codec.git>`__, `dd8e054 <https://github.com/alibaba/hessian2-codec/tree/dd8e05487a27b367b90ce81f4e6e6f62d693a212>`__, 2021-04-05, 


envoy.filters.network.kafka_broker
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Kafka (source) <https://kafka.apache.org>`__, `3.1.0 <https://github.com/apache/kafka/releases/tag/3.1.0>`__, 2022-01-12, `cpe:2.3:a:apache:kafka:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Akafka%3A%2A&search_type=all>`__


envoy.filters.network.kafka_mesh
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Kafka (C/C++ client) <https://github.com/edenhill/librdkafka>`__, `1.8.2 <https://github.com/edenhill/librdkafka/releases/tag/v1.8.2>`__, 2021-10-18, 
  `Kafka (source) <https://kafka.apache.org>`__, `3.1.0 <https://github.com/apache/kafka/releases/tag/3.1.0>`__, 2022-01-12, `cpe:2.3:a:apache:kafka:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Akafka%3A%2A&search_type=all>`__


envoy.filters.network.mysql_proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, 


envoy.filters.network.postgres_proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `C++ SQL Parser Library <https://github.com/envoyproxy/sql-parser>`__, `3b40ba2 <https://github.com/envoyproxy/sql-parser/tree/3b40ba2d106587bdf053a292f7e3bb17e818a57f>`__, 2020-06-10, 


envoy.filters.network.rbac
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `60c7aea <https://github.com/google/cel-cpp/tree/60c7aeabb4e6fa633b49c14d6c6fc8f0516761b9>`__, 2021-11-08, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `2.0.0 <https://github.com/google/flatbuffers/releases/tag/v2.0.0>`__, 2021-05-10, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__


envoy.filters.network.wasm
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `60c7aea <https://github.com/google/cel-cpp/tree/60c7aeabb4e6fa633b49c14d6c6fc8f0516761b9>`__, 2021-11-08, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `2.0.0 <https://github.com/google/flatbuffers/releases/tag/v2.0.0>`__, 2021-05-10, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `694a0b0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/694a0b073912ff3bd00b6ca70d16ca43b2aebbf2>`__, 2022-04-07, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, 


envoy.grpc_credentials.aws_iam
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.82.0 <https://github.com/curl/curl/releases/tag/curl-7_82_0>`__, 2022-03-05, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.rate_limit_descriptors.expr
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `60c7aea <https://github.com/google/cel-cpp/tree/60c7aeabb4e6fa633b49c14d6c6fc8f0516761b9>`__, 2021-11-08, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `2.0.0 <https://github.com/google/flatbuffers/releases/tag/v2.0.0>`__, 2021-05-10, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__


envoy.rbac.matchers.upstream_ip_port
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `60c7aea <https://github.com/google/cel-cpp/tree/60c7aeabb4e6fa633b49c14d6c6fc8f0516761b9>`__, 2021-11-08, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `2.0.0 <https://github.com/google/flatbuffers/releases/tag/v2.0.0>`__, 2021-05-10, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__


envoy.stat_sinks.wasm
~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `ANTLR Rules for Bazel <https://github.com/marcohu/rules_antlr>`__, `3cc2f95 <https://github.com/marcohu/rules_antlr/tree/3cc2f9502a54ceb7b79b37383316b23c4da66f9a>`__, 2019-06-21, 
  `ANTLR v4 <https://github.com/antlr/antlr4>`__, `4.7.2 <https://github.com/antlr/antlr4/releases/tag/4.7.2>`__, 2018-12-18, 
  `Common Expression Language (CEL) C++ library <https://opensource.google/projects/cel>`__, `60c7aea <https://github.com/google/cel-cpp/tree/60c7aeabb4e6fa633b49c14d6c6fc8f0516761b9>`__, 2021-11-08, 
  `FlatBuffers <https://github.com/google/flatbuffers>`__, `2.0.0 <https://github.com/google/flatbuffers/releases/tag/v2.0.0>`__, 2021-05-10, `cpe:2.3:a:google:flatbuffers:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Aflatbuffers%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `694a0b0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/694a0b073912ff3bd00b6ca70d16ca43b2aebbf2>`__, 2022-04-07, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, 


envoy.tls.key_providers.cryptomb
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `libipp-crypto <https://github.com/intel/ipp-crypto>`__, `2021.5 <https://github.com/intel/ipp-crypto/releases/tag/ippcp_2021.5>`__, 2021-12-21, `cpe:2.3:a:intel:cryptography_for_intel_integrated_performance_primitives:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aintel%3Acryptography_for_intel_integrated_performance_primitives%3A%2A&search_type=all>`__


envoy.tracers.opencensus
~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.82.0 <https://github.com/curl/curl/releases/tag/curl-7_82_0>`__, 2022-03-05, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.wasm.runtime.null
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `694a0b0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/694a0b073912ff3bd00b6ca70d16ca43b2aebbf2>`__, 2022-04-07, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, 


envoy.wasm.runtime.v8
~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Chromium's trace event headers <https://chromium.googlesource.com/chromium/src/base/trace_event/common/>`__, `d115b03 <https://storage.googleapis.com/envoyproxy-wee8/chromium-base_trace_event_common-d115b033c4e53666b535cbd1985ffe60badad082.tar.gz>`__, 2022-01-19, 
  `Chromium's zlib <https://chromium.googlesource.com/chromium/src/third_party/zlib/>`__, `9538f41 <https://storage.googleapis.com/envoyproxy-wee8/chromium-zlib-9538f4194f6e5eff1bd59f2396ed9d05b1a8d801.tar.gz>`__, 2022-02-15, 
  `V8 <https://v8.dev>`__, `10.0.139.6 <https://storage.googleapis.com/envoyproxy-wee8/v8-10.0.139.6.tar.gz>`__, 2022-03-07, `cpe:2.3:a:google:v8:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Av8%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `694a0b0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/694a0b073912ff3bd00b6ca70d16ca43b2aebbf2>`__, 2022-04-07, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, 


envoy.wasm.runtime.wamr
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `LLVM <https://llvm.org>`__, `12.0.1 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-12.0.1>`__, 2021-07-09, `cpe:2.3:a:llvm:*:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3A%2A%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `694a0b0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/694a0b073912ff3bd00b6ca70d16ca43b2aebbf2>`__, 2022-04-07, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, 
  `Webassembly Micro Runtime <https://github.com/bytecodealliance/wasm-micro-runtime>`__, `WAMR-12-30-2021 <https://github.com/bytecodealliance/wasm-micro-runtime/releases/tag/WAMR-12-30-2021>`__, 2021-12-30, 


envoy.wasm.runtime.wasmtime
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Bazel rust rules <https://github.com/bazelbuild/rules_rust>`__, `0.2.1 <https://github.com/bazelbuild/rules_rust/releases/tag/0.2.1>`__, 2022-04-04, 
  `wasm-c-api <https://github.com/WebAssembly/wasm-c-api>`__, `c9d3128 <https://github.com/WebAssembly/wasm-c-api/tree/c9d31284651b975f05ac27cee0bab1377560b87e>`__, 2021-01-11, 
  `wasmtime <https://github.com/bytecodealliance/wasmtime>`__, `0.35.2 <https://github.com/bytecodealliance/wasmtime/releases/tag/v0.35.2>`__, 2022-03-31, `cpe:2.3:a:bytecodealliance:wasmtime:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Abytecodealliance%3Awasmtime%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `694a0b0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/694a0b073912ff3bd00b6ca70d16ca43b2aebbf2>`__, 2022-04-07, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, 


envoy.wasm.runtime.wavm
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `LLVM <https://llvm.org>`__, `12.0.1 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-12.0.1>`__, 2021-07-09, `cpe:2.3:a:llvm:*:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3A%2A%3A%2A&search_type=all>`__
  `WAVM <https://wavm.github.io>`__, `c8997eb <https://github.com/WAVM/WAVM/tree/c8997ebf154f3b42e688e670a7d0fa045b7a32a0>`__, 2021-12-15, `cpe:2.3:a:webassembly_virtual_machine_project:webassembly_virtual_machine:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Awebassembly_virtual_machine_project%3Awebassembly_virtual_machine%3A%2A&search_type=all>`__
  `WebAssembly for Proxies (C++ host implementation) <https://github.com/proxy-wasm/proxy-wasm-cpp-host>`__, `694a0b0 <https://github.com/proxy-wasm/proxy-wasm-cpp-host/tree/694a0b073912ff3bd00b6ca70d16ca43b2aebbf2>`__, 2022-04-07, 
  `WebAssembly for Proxies (C++ SDK) <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk>`__, `e30535b <https://github.com/proxy-wasm/proxy-wasm-cpp-sdk/tree/e30535b7c0cd3126e6401bc3769063a74bbb37be>`__, 2022-03-15, 

